--- a/locale/en.json
+++ b/locale/en.json
@@ -68,5 +68,194 @@
       "icons": "Icons"
     },
     "copyright": "All rights reserved."
+  },
+  "languageSwitcher": {
+    "toggleLanguage": "Toggle language",
+    "english": "English",
+    "chinese": "中文"
+  },
+  "slide": {
+    "mySlides": "My Slides",
+    "untitledSlide": "Untitled Slide",
+    "slideNotFound": "Slide Not Found",
+    "editInInfographicAI": "View and manage all your slides and infographics created in InfographicAI",
+    "save": "Save",
+    "saving": "Saving...",
+    "saveSuccess": "Save successful",
+    "saveFailed": "Save failed",
+    "newSlide": "New Slide",
+    "new": "New",
+    "search": "Search...",
+    "createFailed": "Create failed",
+    "rename": "Rename",
+    "delete": "Delete",
+    "cancel": "Cancel",
+    "renameSlide": "Rename Slide",
+    "enterNewName": "Enter new name",
+    "confirmDelete": "Confirm Delete?",
+    "deleteWarning": "This action cannot be undone. This will permanently delete \"{title}\" and all its content.",
+    "renameSuccess": "Rename successful",
+    "renameFailed": "Rename failed",
+    "deleteSuccess": "Delete successful",
+    "deleteFailed": "Delete failed",
+    "emptyState": {
+      "title": "Start Creating",
+      "description": "Create a new presentation and start your amazing presentation.",
+      "createPresentation": "New Presentation"
+    }
+  },
+  "slideViewer": {
+    "previous": "Previous",
+    "next": "Next",
+    "jumpToPage": "Click to jump to specified page",
+    "addSlide": "Add slide",
+    "deleteSlide": "Delete slide",
+    "copyAsPng": "Copy as PNG",
+    "download": "Download",
+    "downloadAsSvg": "Download as SVG",
+    "downloadAsPng": "Download as PNG",
+    "exportAsPpt": "Export as PPT",
+    "fullscreen": "Fullscreen",
+    "exitFullscreen": "Exit Fullscreen",
+    "confirmDelete": "Confirm Delete",
+    "deleteWarning": "Are you sure you want to delete the current infographic? This action cannot be undone.",
+    "cancel": "Cancel",
+    "delete": "Delete",
+    "copySuccess": "Copied as PNG",
+    "copyFailed": "Copy failed",
+    "downloadSuccess": "Downloaded as {format}",
+    "downloadFailed": "Download failed",
+    "exportPptLoading": "Exporting PPT...",
+    "exportPptSuccess": "Exported as PPT",
+    "exportPptFailed": "Export PPT failed",
+    "cannotGetInstance": "Cannot get infographic instance",
+    "emptyInfographic": "Empty Infographic",
+    "emptyInfographicDesc": "Please enter content in the editor on the right, or use the AI generation feature to create an infographic",
+    "infographicDisplayArea": "Infographic Display Area",
+    "selectInfographicToEdit": "Please select an infographic to edit",
+    "renderError": "Render Error",
+    "unknownError": "Unknown error"
+  },
+  "slideEditor": {
+    "preview": "Preview",
+    "edit": "Edit",
+    "editor": "Editor",
+    "ai": "AI",
+    "template": "Template",
+    "title": "Title",
+    "description": "Description",
+    "dataItems": "Data Items",
+    "nodes": "Nodes",
+    "rootNode": "Root Node",
+    "infographicTitle": "Infographic Title",
+    "infographicDescription": "Infographic Description",
+    "label": "Label",
+    "desc": "Description",
+    "value": "Value",
+    "icon": "Icon (e.g., lucide/star)",
+    "id": "ID",
+    "children": "Children",
+    "childNodes": "Child Nodes",
+    "relations": "Relations",
+    "addRelation": "Add Relation",
+    "theme": "Theme",
+    "auto": "Auto",
+    "light": "Light",
+    "dark": "Dark",
+    "colorPalette": "Color Palette: #fff,#000 or antv",
+    "rootNodeLabel": "Root Node Label",
+    "rootNodeDesc": "Root Node Description",
+    "templateGroup": {
+      "list": "List",
+      "sequence": "Sequence",
+      "chart": "Chart",
+      "compare": "Compare",
+      "hierarchy": "Hierarchy",
+      "relation": "Relation"
+    }
+  },
+  "aiGenerator": {
+    "title": "AI Infographic Assistant",
+    "description": "Describe what you want to do with the infographic, AI can help you create, edit or delete infographics",
+    "placeholder": "Describe what you want to do with the infographic...",
+    "errorPlaceholder": "An error occurred, you can resend the message...",
+    "generating": "AI is generating...",
+    "toolExecutionFailed": "Tool execution failed",
+    "requestFailed": "Request failed, please try again later",
+    "generationFailed": "Generation failed, please try again later",
+    "missingSyntax": "Missing syntax parameter",
+    "unnamedInfographic": "Unnamed Infographic",
+    "createInfographic": "Create Infographic",
+    "editInfographic": "Edit Infographic",
+    "deleteInfographic": "Delete Infographic"
+  },
+  "hero": {
+    "startCreatingFree": "Start Creating Free",
+    "designInfographics": "Design Infographics",
+    "withIntelligentAI": "with Intelligent AI",
+    "transformData": "Transform raw data into stunning visual art instantly. AI-powered infographic engine that gives you precise control over every pixel.",
+    "viewDemo": "View Demo",
+    "powerfulFeatures": "Powerful Features",
+    "featuresDesc": "Fast, real-time, beautiful, and intelligent—everything you need to create stunning infographics.",
+    "lightningFast": "Lightning Fast",
+    "lightningFastDesc": "Generate professional infographics in seconds. From data to visual, instantly.",
+    "realtimeEditing": "Real-time Editing",
+    "realtimeEditingDesc": "See changes instantly. Drag, resize, edit—zero delay, seamless workflow.",
+    "beautifulDesign": "Beautiful Design",
+    "beautifulDesignDesc": "Auto-optimized colors, typography, and layouts. Publication-ready quality.",
+    "aiPowered": "AI-Powered",
+    "aiPoweredDesc": "Smart suggestions for charts, layouts, and styles. Describe your vision in plain English.",
+    "powerfulSlideEditor": "Powerful Slide Editor",
+    "powerfulSlideEditorDesc": "Create stunning presentations with ease.",
+    "powerfulSlideEditorDetail": "A feature-rich editor designed for creating professional presentations. Combine AI-powered content generation with intuitive editing tools to bring your ideas to life.",
+    "aiPoweredContent": "AI-Powered Content",
+    "aiPoweredContentDesc": "Generate slide content, outlines, and layouts automatically with AI assistance.",
+    "richEditingTools": "Rich Editing Tools",
+    "richEditingToolsDesc": "Customize text, images, and layouts with an intuitive drag-and-drop interface.",
+    "exportAnywhere": "Export Anywhere",
+    "exportAnywhereDesc": "Export your presentations to PPT, PDF, or share them directly with a link.",
+    "tryTheEditor": "Try the Editor",
+    "showcase": "Showcase",
+    "lovedByCreators": "Loved by Creators",
+    "lovedByCreatorsDesc": "Join thousands of designers streamlining their workflow.",
+    "readyToVisualize": "Ready to visualize your data?",
+    "readyToVisualizeDesc": "Join over 1000+ users creating professional infographics in minutes, not hours.",
+    "getStartedForFree": "Get Started for Free",
+    "totalViews": "Total Views",
+    "totalViewsValue": "10,000+",
+    "generationComplete": "Generation Complete",
+    "yourInfographicIsReady": "Your infographic is ready",
+    "testimonial1": {
+      "quote": "This tool saved me hours on my last quarterly presentation. The AI understands context surrounding each.",
+      "name": "Sarah Jenkins",
+      "title": "Product Designer at Stripe"
+    },
+    "testimonial2": {
+      "quote": "Finally, a design tool that actually helps me visualize complex data without needing a PhD in statistics.",
+      "name": "Mike T.",
+      "title": "Data Analyst at Google"
+    },
+    "testimonial3": {
+      "quote": "The drag and drop interface combined with AI suggestions makes this the fastest tool at my arsenal.",
+      "name": "Elena Rodriguez",
+      "title": "Marketing Dir."
+    }
+  },
+  "explore": {
+    "title": "Explore More",
+    "description": "Explore more features coming soon.",
+    "comingSoon": "Coming Soon",
+    "workingOnSomething": "We're working on something exciting. Stay tuned!"
+  },
+  "aiPrinciples": {
+    "howAIWorks": "How AI Works",
+    "howAIWorksTheme": "From data to intelligent output",
+    "howToMakeAMovie": "How to Make a Movie",
+    "howToMakeAMovieTheme": "From concept to final film",
+    "howToWriteAnArticle": "How to Write an Article",
+    "howToWriteAnArticleTheme": "From topic to final article",
+    "previousSlide": "Previous slide",
+    "nextSlide": "Next slide",
+    "slide": "Slide"
   }
 }
