--- a/locale/zh.json
+++ b/locale/zh.json
@@ -68,5 +68,194 @@
       "icons": "图标"
     },
     "copyright": "保留所有权利。"
+  },
+  "languageSwitcher": {
+    "toggleLanguage": "切换语言",
+    "english": "English",
+    "chinese": "中文"
+  },
+  "slide": {
+    "mySlides": "我的幻灯片",
+    "untitledSlide": "未命名幻灯片",
+    "slideNotFound": "幻灯片未找到",
+    "editInInfographicAI": "查看和管理您在 InfographicAI 中创建的所有幻灯片和信息图",
+    "save": "保存",
+    "saving": "保存中...",
+    "saveSuccess": "保存成功",
+    "saveFailed": "保存失败",
+    "newSlide": "新建幻灯片",
+    "new": "新建",
+    "search": "搜索...",
+    "createFailed": "创建失败",
+    "rename": "重命名",
+    "delete": "删除",
+    "cancel": "取消",
+    "renameSlide": "重命名演示文稿",
+    "enterNewName": "输入新的名称",
+    "confirmDelete": "确认删除？",
+    "deleteWarning": "此操作无法撤销。这将永久删除 \"{title}\" 及其所有内容。",
+    "renameSuccess": "重命名成功",
+    "renameFailed": "重命名失败",
+    "deleteSuccess": "删除成功",
+    "deleteFailed": "删除失败",
+    "emptyState": {
+      "title": "开始你的创作",
+      "description": "创建一个新的演示文稿，开始你的精彩演讲。",
+      "createPresentation": "新建演示"
+    }
+  },
+  "slideViewer": {
+    "previous": "上一个",
+    "next": "下一个",
+    "jumpToPage": "点击跳转到指定页面",
+    "addSlide": "新增 slide",
+    "deleteSlide": "删除 slide",
+    "copyAsPng": "复制为 PNG",
+    "download": "下载",
+    "downloadAsSvg": "下载为 SVG",
+    "downloadAsPng": "下载为 PNG",
+    "exportAsPpt": "导出为 PPT",
+    "fullscreen": "全屏",
+    "exitFullscreen": "退出全屏",
+    "confirmDelete": "确认删除",
+    "deleteWarning": "确定要删除当前信息图吗？此操作无法撤销。",
+    "cancel": "取消",
+    "delete": "删除",
+    "copySuccess": "已复制为 PNG",
+    "copyFailed": "复制失败",
+    "downloadSuccess": "已下载为 {format}",
+    "downloadFailed": "下载失败",
+    "exportPptLoading": "正在导出 PPT...",
+    "exportPptSuccess": "已导出为 PPT",
+    "exportPptFailed": "导出 PPT 失败",
+    "cannotGetInstance": "无法获取信息图实例",
+    "emptyInfographic": "空的信息图",
+    "emptyInfographicDesc": "请在右侧编辑器中输入内容，或使用 AI 生成功能创建信息图",
+    "infographicDisplayArea": "信息图展示区域",
+    "selectInfographicToEdit": "请选择一个信息图进行编辑",
+    "renderError": "渲染错误",
+    "unknownError": "未知错误"
+  },
+  "slideEditor": {
+    "preview": "预览",
+    "edit": "编辑",
+    "editor": "编辑",
+    "ai": "AI",
+    "template": "模板",
+    "title": "标题",
+    "description": "描述",
+    "dataItems": "数据项",
+    "nodes": "节点",
+    "rootNode": "根节点",
+    "infographicTitle": "信息图标题",
+    "infographicDescription": "信息图描述",
+    "label": "标签",
+    "desc": "描述",
+    "value": "数值",
+    "icon": "图标 (如 lucide/star)",
+    "id": "ID",
+    "children": "子项",
+    "childNodes": "子节点",
+    "relations": "关系",
+    "addRelation": "添加关系",
+    "theme": "主题",
+    "auto": "自动",
+    "light": "Light",
+    "dark": "Dark",
+    "colorPalette": "配色: #fff,#000 或 antv",
+    "rootNodeLabel": "根节点标签",
+    "rootNodeDesc": "根节点描述",
+    "templateGroup": {
+      "list": "列表",
+      "sequence": "序列",
+      "chart": "图表",
+      "compare": "对比",
+      "hierarchy": "层级",
+      "relation": "关系"
+    }
+  },
+  "aiGenerator": {
+    "title": "AI 信息图助手",
+    "description": "描述你想要对信息图进行的操作，AI 可以帮你创建、编辑或删除信息图",
+    "placeholder": "描述你想要对信息图进行的操作...",
+    "errorPlaceholder": "发生错误，可以重新发送消息...",
+    "generating": "AI 正在生成中...",
+    "toolExecutionFailed": "工具执行失败",
+    "requestFailed": "请求失败，请稍后重试",
+    "generationFailed": "生成失败，请稍后重试",
+    "missingSyntax": "缺少 syntax 参数",
+    "unnamedInfographic": "未命名信息图",
+    "createInfographic": "创建信息图",
+    "editInfographic": "编辑信息图",
+    "deleteInfographic": "删除信息图"
+  },
+  "hero": {
+    "startCreatingFree": "免费开始创作",
+    "designInfographics": "设计信息图",
+    "withIntelligentAI": "InfographicAI",
+    "transformData": "瞬间将原始数据转化为令人惊叹的视觉艺术。AI 驱动的信息图引擎，让您精确控制每一个像素。",
+    "viewDemo": "查看演示",
+    "powerfulFeatures": "强大功能",
+    "featuresDesc": "快速、实时、美观、智能——创建精美信息图所需的一切。",
+    "lightningFast": "极速生成",
+    "lightningFastDesc": "几秒钟内生成专业信息图。从数据到可视化，瞬间完成。",
+    "realtimeEditing": "实时编辑",
+    "realtimeEditingDesc": "即时查看更改。拖拽、调整大小、编辑——零延迟，无缝工作流。",
+    "beautifulDesign": "精美设计",
+    "beautifulDesignDesc": "自动优化的颜色、排版和布局。达到出版级质量。",
+    "aiPowered": "AI 驱动",
+    "aiPoweredDesc": "智能建议图表、布局和样式。用简单的英语描述您的愿景。",
+    "powerfulSlideEditor": "强大的幻灯片编辑器",
+    "powerfulSlideEditorDesc": "轻松创建令人惊艳的演示文稿。",
+    "powerfulSlideEditorDetail": "专为创建专业演示文稿而设计的丰富功能编辑器。将 AI 驱动的内容生成与直观的编辑工具相结合，让您的想法变为现实。",
+    "aiPoweredContent": "AI 驱动内容",
+    "aiPoweredContentDesc": "通过 AI 辅助自动生成幻灯片内容、大纲和布局。",
+    "richEditingTools": "丰富的编辑工具",
+    "richEditingToolsDesc": "使用直观的拖放界面自定义文本、图像和布局。",
+    "exportAnywhere": "随处导出",
+    "exportAnywhereDesc": "将演示文稿导出为 PPT、PDF，或直接通过链接分享。",
+    "tryTheEditor": "试试编辑器",
+    "showcase": "作品展示",
+    "lovedByCreators": "深受创作者喜爱",
+    "lovedByCreatorsDesc": "加入数千名设计师，简化您的工作流程。",
+    "readyToVisualize": "准备好可视化您的数据了吗？",
+    "readyToVisualizeDesc": "加入 1000+ 用户，在几分钟内创建专业信息图，而不是几小时。",
+    "getStartedForFree": "免费开始",
+    "totalViews": "总浏览量",
+    "totalViewsValue": "10,000+",
+    "generationComplete": "生成完成",
+    "yourInfographicIsReady": "您的信息图已准备就绪",
+    "testimonial1": {
+      "quote": "这个工具在我上次季度演示中为我节省了数小时。AI 能够理解每个内容的上下文。",
+      "name": "Sarah Jenkins",
+      "title": "Stripe 产品设计师"
+    },
+    "testimonial2": {
+      "quote": "终于有一个设计工具能真正帮助我可视化复杂数据，而不需要统计学博士学位。",
+      "name": "Mike T.",
+      "title": "Google 数据分析师"
+    },
+    "testimonial3": {
+      "quote": "拖放界面结合 AI 建议，使这成为我工具库中最快的工具。",
+      "name": "Elena Rodriguez",
+      "title": "市场总监"
+    }
+  },
+  "explore": {
+    "title": "Explore More",
+    "description": "Explore more features coming soon.",
+    "comingSoon": "Coming Soon",
+    "workingOnSomething": "We're working on something exciting. Stay tuned!"
+  },
+  "aiPrinciples": {
+    "howAIWorks": "How AI Works",
+    "howAIWorksTheme": "From data to intelligent output",
+    "howToMakeAMovie": "How to Make a Movie",
+    "howToMakeAMovieTheme": "From concept to final film",
+    "howToWriteAnArticle": "How to Write an Article",
+    "howToWriteAnArticleTheme": "From topic to final article",
+    "previousSlide": "上一个",
+    "nextSlide": "下一个",
+    "slide": "幻灯片"
   }
 }
